# alfred-zed-explorer

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  info.plist  verify.sh  verify_fixes.sh
.github/workflows/: release.yml
src/: lib.rs  project.rs  zed_db.rs
