[package]
name = "zed-workspace-explorer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Alfred workflow to search and open Zed projects"
license = "MIT"
repository = "https://github.com/username/zed-workspace-explorer"

[[bin]]
name = "zed-search"
path = "src/bin/search.rs"

[[bin]]
name = "zed-recent"
path = "src/bin/recent.rs"

[[bin]]
name = "debug-zed-db"
path = "src/bin/debug.rs"

[[bin]]
name = "zed"
path = "src/bin/zed.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
fuzzy-matcher = "0.3"
dirs = "5.0"
walkdir = "2.4"
anyhow = "1.0"
chrono = "0.4"
tempfile = "3.8"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1
strip = true
